# clighlighter

./: .gitignore  Cargo.toml  README.md  foo.rs
src/: cli.rs  highlight.rs  index.ts  initial_padding.rs  lib.rs  main.rs  shared.rs  ts.rs
src/highlight/: classes.md  explore.rs  mod.rs  rust.rs  shared.rs  ts.rs
tests/: debug-rust.html  integration_test.rs  output-rs.html  output-ts.html
