[package]
name = "clighlighter"
version = "1.0.0-rc1"
edition = "2024"
license = "MIT"
description = "simple command-line code highlighter"
homepage = "https://github.com/swizzard/clighlighter"
repository = "https://github.com/swizzard/clighlighter"
readme = "README.md"
keywords = ["highlighting", "html"]
categories = ["command-line-utilities"]

[build-dependencies]
cc = "~1.2.13"

[dependencies]
clap = { version = "4.5.27", features = ["cargo", "derive"] }
tree-sitter = "0.25.1"
tree-sitter-rust = "0.23.2"
tree-sitter-typescript = "0.23.2"
